# OpenLLM-Studio

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.e2e.json  vitest.config.ts  wdio.conf.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agent-wiki/: .agyrc  ARCHITECTURE.md  CONTRIBUTING.md  README.md
agent-wiki/10-projects/: project-lockin.md  project-openllm-studio.md  project-operation-offload.md  project-piperdesk.md
agent-wiki/20-systems/: system-fedora.md  system-local-ai.md  system-macos.md  system-rio-zellij.md  system-security.md
agent-wiki/30-runbooks/: runbook-dev-server-recovery.md  (+5 more)
e2e/: README.md  app.spec.ts  chat.spec.ts  conversation.spec.ts  hardware.spec.ts  model-download.spec.ts  model-operations.spec.ts  onboarding.spec.ts  settings.spec.ts  wizard.spec.ts
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_optimization_settings.sql  003_licenses.sql  004_hardware_info.sql  005_is_shared_memory.sql
src-tauri/src/: app_logging.rs  audit_logger.rs  backend_router.rs  coding_agent.rs  commands.rs  compliance.rs  db.rs  download_manager.rs  error.rs  gdpr_reporter.rs  hardware.rs  hipaa_reporter.rs  huggingface.rs  lib.rs  license.rs  llama_binaries.rs  local_runtime.rs  loop_detector.rs  lora_trainer.rs  main.rs  memory_optimizer.rs  metrics.rs  model_recommender.rs  model_router.rs  model_store.rs  models.rs  ollama.rs  optimization.rs  personalization.rs  quantization.rs  rag.rs  sandbox.rs  self_check.rs  team_config.rs  telemetry.rs  test_generator.rs
src-tauri/src/tests/: mod.rs
(+93 files in other folders)
