[package]
name = "openllm-studio"
version = "1.0.0"
description = "A beautiful desktop application for managing and interacting with local AI models"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openllm_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
attohttpc = { version = "0.30", default-features = false, features = ["json", "tls-rustls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
rusqlite = "0.32"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "5"
urlencoding = "2"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
zip = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
